# HOOK

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
CLMR/: main.py
CLMR/clmr/: data.py
CLMR/clmr/datasets/: __init__.py  audio.py  dataset.py  gtzan.py
CLMR/clmr/models/: __init__.py  model.py  sample_cnn.py
CLMR/clmr/utils/: __init__.py  checkpoint.py
docs/: architecture.md  data-sources.md  decisions.md  development.md  retrieval-mvp.md
notebooks/: Untitled.ipynb  extracting_representations_recoded.ipynb  indentifying_space_between_spaces.ipynb
notebooks/.ipynb_checkpoints/: extracting_representations_recoded-checkpoint.ipynb
notebooks/experiments/: extracting_representations_projection.ipynb
scripts/: build_gtzan_metadata.py
src/hook/: __init__.py
src/hook/clmr/: data.py
src/hook/clmr/datasets/: __init__.py  audio.py  dataset.py  gtzan.py
src/hook/clmr/models/: __init__.py  model.py  sample_cnn.py
src/hook/clmr/utils/: __init__.py  checkpoint.py
src/hook/pipelines/: extract_embeddings.py
src/hook/retrieval/: README.md  __init__.py  cli.py  genre_retriever.py
