[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hook-project"
version = "0.1.0"
description = "HOOK retrieval and embedding pipelines"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchaudio",
  "torchaudio-augmentations",
  "hnswlib",
  "pytorch-lightning",
  "soundfile",
  "matplotlib",
  "datasets",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
